[package]
name = "lumosai_marketplace"
version = "0.1.1"
edition = "2021"
description = "Lumos.ai工具市场建设模块 - 完整的工具生态系统"
license = "MIT"
repository = "https://github.com/louloulin/lumos.ai.git"
keywords = ["ai", "agent", "tools", "marketplace", "ecosystem"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Core dependencies
lumosai_core = { path = "../lumosai_core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Search and indexing
tantivy = "0.21"
fuzzy-matcher = "0.3"

# Security and validation
sha2 = "0.10"
jsonschema = "0.17"
regex = "1.0"

# Async and utilities
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Compression and archives
tar = "0.4"
flate2 = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
