# LumosAI UI 作为主工作区的子模块，不需要独立的工作区配置

[package]
name = "lumosai_ui"
version = "0.1.3"
edition = "2021"
description = "LumosAI UI components based on bionic-gpt design patterns"
license = "MIT"
repository = "https://github.com/lumosai/lumosai"
keywords = ["ui", "web", "components", "lumosai", "ai"]
categories = ["web-programming", "gui"]

[dependencies]
web-pages = { path = "web-pages" }
web-assets = { path = "web-assets" }

# Core dependencies for the main package
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
daisy_rsx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
