[package]
name = "lumosai_vector"
version = "0.1.0"
edition = "2021"
authors = ["Lumos.ai Team <team@lumos.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumosai/lumos"
description = "Unified vector storage system for Lumos.ai"

[dependencies]
# Re-export all vector storage implementations
lumosai-vector-core = { path = "core" }
lumosai-vector-memory = { path = "memory", optional = true }
# lumosai-vector-qdrant = { path = "qdrant", optional = true }  # TODO: Fix API compatibility with qdrant-client 1.14
lumosai-vector-postgres = { path = "postgres", optional = true }

[features]
default = ["memory"]
memory = ["lumosai-vector-memory"]
# qdrant = ["lumosai-vector-qdrant"]  # TODO: Fix API compatibility
postgres = ["lumosai-vector-postgres"]
all = ["memory", "postgres"] # TODO: Add qdrant when API compatibility is fixed

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test.workspace = true
