[package]
name = "lumosai_vector"
version = "0.1.0"
edition = "2021"
authors = ["Lumos.ai Team <team@lumos.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumosai/lumos"
description = "Unified vector storage system for Lumos.ai"

[dependencies]
# Re-export all vector storage implementations
lumosai-vector-core = { path = "core" }
lumosai-vector-memory = { path = "memory", optional = true }
lumosai-vector-qdrant = { path = "qdrant", optional = true }
lumosai-vector-weaviate = { path = "weaviate", optional = true }
lumosai-vector-postgres = { path = "postgres", optional = true }

[features]
default = ["memory"]
memory = ["lumosai-vector-memory"]
qdrant = ["lumosai-vector-qdrant"]
weaviate = ["lumosai-vector-weaviate"]
postgres = ["lumosai-vector-postgres"]
all = ["memory", "qdrant", "weaviate", "postgres"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test.workspace = true
