[package]
name = "rag_system"
version = "0.1.0"
edition = "2021"

[dependencies]
lumosai = { path = "../../", features = ["vector-all"] }
lumosai_rag = { path = "../../lumosai_rag" }
lumosai_vector = { path = "../../lumosai_vector" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
