[package]
name = "web-pages"
version = "0.1.3"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
# Local dependencies
web-assets = { path = "../web-assets" }

# Core UI dependencies
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
daisy_rsx = { workspace = true }

# HTTP and routing (for UI components only)
axum = { workspace = true }
axum-extra = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown processing
comrak = { workspace = true }

# Time handling
time = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["time"] }

# Validation
validator = { workspace = true }

# OpenAPI (for UI components)
oas3 = { workspace = true }

# UUID generation
uuid = { workspace = true }