[package]
name = "lumosai-web-server"
version = "0.1.0"
edition = "2021"

# Enable backtrace feature for panic hook
[features]
default = ["desktop"]
web = ["dioxus/web", "dep:dioxus-web", "dep:dioxus-router", "dep:axum"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:dioxus-router", "dep:axum"]
server = ["dioxus/server", "dep:dioxus-fullstack", "dep:dioxus-router", "dep:axum"]
fullstack = ["dioxus/fullstack", "dioxus/router", "dep:dioxus-fullstack", "dep:dioxus-router", "dep:axum"]

[[bin]]
name = "lumosai-web-server"
path = "main.rs"

[[bin]]
name = "lumosai-desktop"
path = "desktop.rs"

[dependencies]
# Local dependencies
web-pages = { path = "../web-pages" }
web-assets = { path = "../web-assets" }

# Dioxus framework
dioxus = { version = "0.6", features = ["router"] }
dioxus-web = { version = "0.6", optional = true }
dioxus-desktop = { version = "0.6", optional = true }
dioxus-router = { version = "0.6", optional = true }
dioxus-fullstack = { version = "0.6", optional = true }

# Web server (for fullstack mode)
axum = { version = "0.8", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version="0.3.19", features = ["env-filter"] }

# Utilities
rand = { version = "0.9.1" }
url = "2.4"

# Additional dependencies for specific features
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# Database (using in-memory storage for now)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Time handling
time = { version = "0.3.36", features = ["serde"] }

[dev-dependencies]
