[package]
name = "lumosai-vector-core"
version = "0.1.1"
edition = "2021"
authors = ["Lumos.ai Team <team@lumos.ai>"]
description = "Core abstractions and traits for Lumos vector storage system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumosai/lumos"
keywords = ["vector", "embedding", "ai", "rag", "search"]
categories = ["database", "science", "algorithms"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time"] }

# Optional serialization support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
