[package]
name = "lumosai-vector-core"
version = "0.1.4"
edition = "2021"
authors = ["Lumosai Team <team@lumosai.dev>"]
description = "Core abstractions and traits for Lumosai vector storage system"
license = "MIT"
repository = "https://github.com/louloulin/lumos.ai.git"
homepage = "https://lumosai.dev"
documentation = "https://docs.rs/lumosai-vector-core"
readme = "README.md"
keywords = ["vector", "embedding", "ai", "rag", "search"]
categories = ["database", "science", "algorithms"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time"] }

# Optional serialization support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
