[package]
name = "lumosai-vector-lancedb"
version = "0.1.0"
edition = "2021"
authors = ["LumosAI Team <team@lumosai.dev>"]
description = "LanceDB integration for LumosAI vector storage - high-performance columnar vector database"
license = "MIT"
repository = "https://github.com/lumosai/lumosai"
homepage = "https://lumosai.dev"
documentation = "https://docs.rs/lumosai-vector-lancedb"
readme = "README.md"
keywords = ["ai", "vector", "database", "lancedb", "columnar"]
categories = ["database", "science", "api-bindings"]

[dependencies]
# Core dependencies
lumosai-vector-core = { path = "../core", version = "0.1.0", features = ["serde"] }
async-trait = "0.1.77"
tokio = { version = "1.35", features = ["full"] }

# LanceDB dependencies
lancedb = "0.8.0"
lance = "0.12.0"
arrow = "52.0.0"
arrow-array = "52.0.0"
arrow-schema = "52.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.10"

[features]
default = []
# Enable all features
all = ["metrics", "compression"]
# Enable metrics collection
metrics = []
# Enable compression
compression = []

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "batch_operations"
required-features = []

[[example]]
name = "vector_search"
required-features = []


