[package]
name = "lumosai-vector-lancedb"
version = "0.1.2"
edition = "2021"
authors = ["LumosAI Team <team@lumosai.dev>"]
description = "LanceDB integration for LumosAI vector storage - high-performance columnar vector database"
license = "MIT"
repository = "https://github.com/lumosai/lumosai"
homepage = "https://lumosai.dev"
documentation = "https://docs.rs/lumosai-vector-lancedb"
readme = "README.md"
keywords = ["ai", "vector", "database", "lancedb", "columnar"]
categories = ["database", "science", "api-bindings"]

[dependencies]
# Core dependencies
lumosai-vector-core = { path = "../core", version = "0.1.0", features = ["serde"] }
async-trait = { workspace = true }
tokio = { workspace = true }

# LanceDB dependencies
lancedb = { workspace = true }
lance = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.10"

[features]
default = []
# Enable all features
all = ["metrics", "compression"]
# Enable metrics collection
metrics = []
# Enable compression
compression = []

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "batch_operations"
required-features = []

[[example]]
name = "vector_search"
required-features = []


